@@ -1,4 +1,7 @@
 
+	* bin/cygport.in (unpack):
+	Fix handling of non-tar .bz2 and .gz archives.
+
 	* data/Makefile.am:
 	Don't clobber cygport.conf on a local install.
 
